<resources>
    <string name="app_name">TIMEWAYS</string>
    <string name="text_enter_email">Nhập email</string>
    <string name="text_enter_password">Nhập password</string>
    <string name="text_login">Đăng nhập</string>
    <string name="facebook_app_id">194270715358437</string>
    <string name="fb_login_protocol_scheme">fb194270715358437</string>
    <string name="todolist_work_title_dialog">Thêm công việc</string>
    <string name="todolist_work_name_hint">Nhập nội dung công việc</string>
    <string name="todolist_work_date_due_hint" >Nhập ngày kết thúc công việc</string>
    <string name="todolist_work_time_due_hint">Nhập thời gian kết thúc hạn công việc</string>
    <string name="todolist_button_add_work_dialog">Thêm công việc</string>
    <string name="todolist_button_cancel_add_work_dialog">Hủy</string>
    <string name="todolist_update_work_title_dialog">Cập nhật công việc</string>
    <string name="todolist_button_update_work_dialog">Cập nhật</string>
    <string name="font_signUp"><u>Đăng ký</u></string>
    <string name="text_enter_repeat_password">Nhập lại mật khẩu</string>
</resources>
